src/test/ui/regions/regions-return-ref-to-upvar-issue-17403.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/regions-return-ref-to-upvar-issue-17403.rs:7:24
   |
LL |         let mut f = || &mut x;
   |             -----   -- ^^^^^^ cannot be stored outside of its closure
   |             |       |
   |             |       ...because it cannot outlive this closure
   |             borrowed data cannot be stored into here...

error: aborting due to previous error

